manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: app-82275303
spec:
    ports:
    - port: 8080 
    selector:
        app: "82275303"
