manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82275303-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "82275303.ce-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: app-82275303
            port:
              number: 8080
        pathType: Prefix
